# p2p-shipyard

./: .gitignore  404.html  blog.html  flake.nix  hashmap.json  index.html  package.json  pnpm-lock.yaml  pricing.html  roadmap.html
.github/: funding.yml
assets/: app.Bw_tJvpk.js  app.Bx-dP22q.js  blog.md.KeCaOjKP.js  blog.md.KeCaOjKP.lean.js  documentation_android_developing.md.DWfL1kSl.js  documentation_android_developing.md.DWfL1kSl.lean.js  documentation_android_device-setup.md.B4u82E7w.js  documentation_android_device-setup.md.B4u82E7w.lean.js  documentation_android_project-setup.md.DAIZ6aeT.js  documentation_android_project-setup.md.DAIZ6aeT.lean.js  documentation_android_shipping.md.D4t5rr3e.js  documentation_android_shipping.md.D4t5rr3e.lean.js  documentation_desktop_shipping.md.gfPTFcMR.js  documentation_desktop_shipping.md.gfPTFcMR.lean.js  documentation_faqs.md.HG5rp_lY.js  documentation_faqs.md.HG5rp_lY.lean.js  documentation_getting-to-know-tauri.md.D9gFewpH.js  documentation_getting-to-know-tauri.md.D9gFewpH.lean.js  documentation_how-to-create-a-holochain-runtime.md.dBpPUSdP.js  documentation_how-to-create-a-holochain-runtime.md.dBpPUSdP.lean.js  documentation_how-to-create-an-end-user-happ.md.UpwHL9It.js  documentation_how-to-create-an-end-user-happ.md.UpwHL9It.lean.js  documentation_troubleshooting.md.DDkfu1GJ.js  documentation_troubleshooting.md.DDkfu1GJ.lean.js  guides_android_developing.md.0KJcU2FY.js  guides_android_developing.md.0ycWIU41.js  guides_android_developing.md.B--C5xGV.js  guides_android_developing.md.B--C5xGV.lean.js  (+403 more)
crates/hc-pilot/: Cargo.toml
crates/hc-pilot/src/: main.rs
crates/holochain-manager/: Cargo.toml
crates/holochain-manager-uniffi/: Cargo.toml  README.md  uniffi.toml
crates/holochain-manager-uniffi/scripts/: build-debug.sh  build-release.sh
crates/holochain-manager-uniffi/src/: config.rs  error.rs  lib.rs  runtime.rs  types.rs
crates/holochain-manager/src/: config.rs  error.rs  features.rs  filesystem.rs  holochain.udl  http_server.rs  lair_signer.rs  launch.rs  lib.rs  utils.rs
crates/holochain-manager/src/commands/: install_web_app.rs  list_apps.rs  mod.rs  sign_zome_call.rs
crates/holochain-manager/src/launch/: mdns.rs  signal.rs
crates/tauri-plugin-holochain/: Cargo.toml  build.rs
crates/tauri-plugin-holochain-foreground-service/: Cargo.toml  README.md  build.rs  package.json
crates/tauri-plugin-holochain-foreground-service/android/: build.gradle.kts
crates/tauri-plugin-holochain-foreground-service/android/src/androidTest/java/: ExampleInstrumentedTest.kt
crates/tauri-plugin-holochain-foreground-service/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-holochain-foreground-service/android/src/main/java/: HolochainPlugin.kt  HolochainService.kt
crates/tauri-plugin-holochain-foreground-service/android/src/main/java/uniffi/holochain_manager_uniffi/: holochain_manager_uniffi.kt
crates/tauri-plugin-holochain-foreground-service/android/src/test/java/: ExampleUnitTest.kt
crates/tauri-plugin-holochain-foreground-service/examples/tauri-app/: package.json  pnpm-lock.yaml
crates/tauri-plugin-holochain-foreground-service/examples/tauri-app/src/: App.svelte
crates/tauri-plugin-holochain-foreground-service/examples/tauri-app/src-tauri/: Cargo.toml
crates/tauri-plugin-holochain-foreground-service/examples/tauri-app/src-tauri/capabilities/: default.json
crates/tauri-plugin-holochain-foreground-service/examples/tauri-app/src-tauri/src/: lib.rs
crates/tauri-plugin-holochain-foreground-service/guest-js/: index.ts
crates/tauri-plugin-holochain-foreground-service/permissions/: default.toml
crates/tauri-plugin-holochain-foreground-service/permissions/autogenerated/: reference.md
crates/tauri-plugin-holochain-foreground-service/permissions/schemas/: schema.json
crates/tauri-plugin-holochain-foreground-service/src/: desktop.rs  lib.rs  mobile.rs  models.rs
crates/tauri-plugin-holochain/permissions/autogenerated/: reference.md
crates/tauri-plugin-holochain/permissions/schemas/: schema.json
crates/tauri-plugin-holochain/src/: commands.rs  error.rs  lib.rs
crates/tauri-plugin-holochain/src/commands/: install_web_app.rs  list_apps.rs  sign_zome_call.rs
(+65 files in other folders)
