[package]
name = "hc-pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"

tauri-plugin-holochain = { path = "../tauri-plugin-holochain" }
holochain-manager = { path = "../holochain-manager" }
holochain_types = "0.3.2"
holochain_client = "0.5.1"

clap = { version = "4.5.4", features = ["derive"] }
log = "0.4"
url2 = "0.0.6"
anyhow = "1"
tempdir = "0.3.7"
lair_keystore = { version = "0.4.5" }

[build-dependencies]
tauri-build = { version = "2.0.0-rc", default-features = false, features = [
] }
