[package]
name = "tauri-plugin-holochain-foreground-service"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-holochain-foreground-service"

[dependencies]
tauri = { version = "2.0.0-rc.3" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.3", features = ["build"] }
tauri-build = "2.0.0-rc.3"
