[package]
name = "tauri-plugin-holochain"
version = "0.0.0"
authors = ["guillem@darksoil.studio"]
description = ""
edition = "2021"
rust-version = "1.75"
links = "tauri-plugin-holochain"

[dependencies]
tauri = { version = "2.0.0-rc", features = [
  "devtools",
  "native-tls-vendored",
] }
holochain-manager = { path = "../holochain-manager" }
holochain_client = "0.5.1"
holochain_types = "0.3.2"
hc_seed_bundle = "0.2"

serde = "1.0.193"
one_err = "0"
thiserror = "1.0"
url = "2.4.0"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc", features = ["build"] }

[features]
default = ["gossip_arc_normal"]

gossip_arc_empty = []
gossip_arc_full = []
gossip_arc_normal = []